--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@google/genai": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "canvas-confetti": "^1.9.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
